plugins {
	id 'org.springframework.boot' version '2.6.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'crypto'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '18'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	// exchange clients
	implementation 'org.knowm.xchange:xchange-core:5.0.13'
	implementation 'org.knowm.xchange:xchange-binance:5.0.13'
	implementation 'org.knowm.xchange:xchange-bittrex:5.0.13'
	implementation 'org.knowm.xchange:xchange-coinbasepro:5.0.13'
	implementation 'org.knowm.xchange:xchange-hitbtc:5.0.13'
	implementation 'org.knowm.xchange:xchange-kraken:5.0.13'
	implementation 'org.knowm.xchange:xchange-kucoin:5.0.13'
	// end - exchange clients
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testImplementation 'org.mockito:mockito-inline:4.5.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

// these VM arguments are necessary otherwise we would get exception:
// InaccessibleObjectException: Unable to make field private static final java.lang.String[] java.net.HttpURLConnection.methods accessible: module java.base does not "opens java.net" to unnamed module
// while instantiating a BittrexExchange obj
bootRun {
	jvmArgs = ["--add-opens", "java.base/java.net=ALL-UNNAMED"]
}
